<resources>
    <string name="app_name">AIRNEIS</string>

    <!-- Nav Drawer -->
    <string name="nav_drawer_opened">Side menu Opened</string>
    <string name="nav_drawer_closed">Side menu Closed</string>
    <string name="nav_drawer_action_signin">Sign in</string>
    <string name="nav_drawer_action_signup">Sign up</string>
    <string name="nav_drawer_action_disconnect">Disconnect</string>
    <string name="nav_drawer_action_cgu">T&amp;Cs</string>
    <string name="nav_drawer_action_mentionsLegales">Legal notices</string>
    <string name="nav_drawer_action_contact">Contact</string>
    <string name="nav_drawer_action_socialNetworks">Social networks</string>
    <string name="nav_drawer_action_home">Home</string>

    <!-- Inscription Page -->
    <string name="title_registration">Registration</string>
    <string name="content_description_title_registration">Registration</string>
    <string name="registration_lastName_title">Last Name *</string>
    <string name="registration_name_title">Name *</string>
    <string name="content_description_registration_lastName_title">Last Name</string>
    <string name="content_description_registration_name_title">Name </string>
    <string name="registration_lastName" translatable="false">John</string>
    <string name="registration_name" translatable="false">DOE</string>
    <string name="registration_email_title">Email *</string>
    <string name="registration_email_name" translatable="false">john@smith.com</string>
    <string name="content_description_registration_email_title">Email</string>
    <string name="registration_password_title">Password *</string>
    <string name="content_description_registration_password_title">Password</string>
    <string name="registration_redirection">Have a account ?</string>
    <string name="registration_redirection2">Log in</string>
    <string name="content_description_registration_redirection2">Link to redirect on the connection page</string>
    <string name="registration_registerButton">Register</string>
    <string name="content_description_registration_registerButton">Button to validate the register</string>
    <string name="registration_errorLength">The password must contain at least 8 characters</string>
    <string name="registration_errorSpecialCharacter">The password must contain at least one special character</string>
    <string name="registration_errorSpecialUpperCase">The password must contain at least one capital letter</string>
    <string name="registration_errorSpecialNumber">The password must contain at least one number</string>

    <!-- Home Page -->
    <string name="home_page_catch_phrase">From the highlands of Scotland, our furniture is immortal!</string>
    <string name="home_page_highlander">Highlanders of the moment</string>
    <string name="home_page_categoryButton">All category</string>

    <!-- Login Page -->
    <string name="title_login">Login</string>
    <string name="login_redirection">No account ?</string>
    <string name="login_redirection2">Register</string>
    <string name="content_description_login_redirection2">Link to redirect on the connection page</string>
    <string name="login_passwordForgotten">Password forgotten ? </string>
    <string name="content_description_passwordForgotten">Link to send a ask for reset password</string>
    <string name="login_loginButton">Log in</string>

    <!-- Product Page -->
    <string name="productPage_productName">Product name</string>
    <string name="productPage_productPrice" translatable="false">399£</string>
    <string name="productPage_productStock">In stock</string>
    <string name="productPage_productDescription" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla molestie, est nec vehicula fringilla, ligula mauris posuere magna, vel pharetra purus ante vel turpis. Aenean in justo dictum, hendrerit eros eget, dictum metus. Nunc ac velit lacinia, feugiat odio at, feugiat tortor. Donec et massa non felis iaculis elementum quis a sem. Maecenas et viverra quam, lacinia lobortis ligula. Proin in pulvinar neque, sit amet sodales odio. Nulla nibh mi, mollis quis ex non, ultricies cursus nunc. Nulla facilisi. Maecenas sit amet commodo elit. Suspendisse eu tempus tortor. Duis vestibulum auctor risus vitae laoreet. Integer hendrerit nulla turpis. Nunc laoreet aliquet sodales.</string>
    <string name="productPage_addButton">Add to cart</string>
    <string name="contentDescription_productPage_addButton">Button to add to cart</string>
    <string name="productPage_productSimilar">Similar product</string>
    <string name="contentDescription_productPage_photoView1">Picture of first similar product</string>
    <string name="contentDescription_productPage_photoView2">Picture of second similar product</string>
    <string name="contentDescription_productPage_photoView3">Picture of third similar product</string>

    <!-- Category_List Page -->
    <string name="listCategory_title">Categories</string>
    <string name="listCategory_titleListProduct">Product of the category</string>

    <!-- Basket Page -->
    <string name="basketPage_title">Basket</string>
    <string name="basketPage_total" translatable="false">TOTAL</string>
    <string name="basketPage_tva" translatable="false">TVA</string>
    <string name="basketPage_priceTotal" translatable="false">4 800€</string>
    <string name="basketPage_priceTva" translatable="false">800€</string>
    <string name="basketPage_button">Place the order</string>
    <string name="basketCell_productName">Product name</string>
    <string name="basketCell_productDescription" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla molestie, est nec vehicula fringilla, ligula mauris posuere magna</string>
    <string name="basketCell_productPrice" translatable="false">123€</string>
    <string name="basketCell_productQuantity" translatable="false">1</string>

    <!-- Delivery Page -->
    <string name="deliveryPage_title">Delivery</string>
    <string name="facturationPage_title">Facturation</string>
    <string name="deliveryPage_addressName"> Address Name</string>
    <string name="deliveryPage_lastName"> Last name*</string>
    <string name="deliveryPage_name"> Name*</string>
    <string name="deliveryPage_address1"> Address 1*</string>
    <string name="deliveryPage_address1_example" translatable="false"> 13 rue de la lune</string>
    <string name="deliveryPage_address2"> Address 2</string>
    <string name="deliveryPage_address2_example">Optional Address</string>
    <string name="deliveryPage_city">City*</string>
    <string name="deliveryPage_city_example" translatable="false">Lille</string>
    <string name="deliveryPage_zipCode">Zip code*</string>
    <string name="deliveryPage_zipCode_example" translatable="false">59000</string>
    <string name="facturationPage_button">Go to payment</string>
    <string name="deliveryPage_button">Go to facturation</string>


    <!-- Payment Page -->
    <string name="paymentPage_title">Payment</string>
    <string name="paymentPage_paymentMethod">Select a payment method</string>
    <string name="paymentPage_cardNumber">Card number*</string>
    <string name="paymentPage_cardNumber_example" translatable="false">4292 9540 8493 921</string>
    <string name="paymentPage_nameCardPayment">Full Name*</string>
    <string name="paymentPage_nameCardPayment_example" translatable="false">John Smith</string>
    <string name="paymentPage_expirationDate">Expiration date*</string>
    <string name="paymentPage_expirationDate_example" translatable="false">09/25</string>
    <string name="paymentPage_CVV">CVV*</string>
    <string name="paymentPage_CVV_example" translatable="false">123</string>
    <string name="paymentPage_button">Pay</string>
    <string name="paymentPage_informationDelete">To delete a payment method, please click on the one you want to delete</string>
    <string name="contentDescription_informationDelete">To delete a payment method, please click on the one you want to delete</string>

    <!-- Order Confirmed Page -->
    <string name="orderConfirmedPage_title">Order Confirmed</string>
    <string name="orderConfirmedPage_button">Continue shopping</string>
    <string name="orderConfirmedPage_thankYou">Thank you for your purchase !</string>
    <string name="orderConfirmedPage_detail">Your order has been registered under the number XXXXXXX. You can follow the status of your order from your customer area. </string>

    <!-- Contact Page -->
    <string name="contactPage_title">Contact</string>
    <string name="contactPage_email">Enter your email address</string>
    <string name="contactPage_object">Object of contact</string>
    <string name="contactPage_mail" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla molestie, est nec vehicula fringilla, ligula mauris posuere magna, vel pharetra purus ante vel turpis. Aenean in justo dictum, hendrerit eros eget, dictum metus. Nunc ac velit lacinia, feugiat odio at, feugiat tortor. Donec et massa non felis iaculis elementum quis a sem. Maecenas et viverra quam, lacinia lobortis ligula. Proin in pulvinar neque, sit amet sodales odio. Nulla nibh mi, mollis quis ex non, ultricies cursus nunc.</string>
    <string name="contactPage_send">Send mail</string>

    <!-- Account Page -->
    <string name="accountPage">My account</string>
    <string name="accountPage_title">My account</string>
    <string name="accountPage_lastName">Last Name</string>
    <string name="accountPage_name">Name</string>
    <string name="accountPage_mail">Mail</string>
    <string name="accountPage_password">Password</string>
    <string name="accountPage_address">Address</string>
    <string name="accountPage_city">City</string>
    <string name="accountPage_zipCode">ZipCode</string>
    <string name="accountPage_button">Save</string>
    <string name="accountPage_numberPhone">Phone number</string>
    <string name="accountPage_personalInformation">Personal information</string>
    <string name="accountPage_accessButton">Access</string>
    <string name="accountPage_payment">Payment</string>
    <string name="accountPage_orderHistory">Order history</string>

    <!-- Address account Page -->
    <string name="addressAccount_title">Address</string>
    <string name="addressAccount_name">Name</string>
    <string name="addressAccount_nameEx">Home</string>
    <string name="addressAccount_street">Street</string>
    <string name="addressAccount_streetEx" translatable="false">23 bis Winston Churchill</string>
    <string name="addressAccount_city">City</string>
    <string name="addressAccount_cityEx" translatable="false">London</string>
    <string name="addressAccount_zipCode">ZipCode</string>
    <string name="addressAccount_zipCodeEx" translatable="false">76565</string>
    <string name="addressAccount_complement">Complement</string>
    <string name="addressAccount_complementEx">Complement of address</string>
    <string name="addressAccount_country">Country</string>
    <string name="addressAccount_countryEx" translatable="false">USA</string>
    <string name="addressAccount_region">Region</string>
    <string name="addressAccount_regionEx" translatable="false">texas</string>

    <!-- Order Page -->
    <string name="orderAccount_date" translatable="false">Wednesday, 21 June 2023 at 15:34:31</string>
    <string name="orderAccount_priceTTC" translatable="false">55.55</string>
    <string name="orderAccount_status">Pending</string>
</resources>