<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_connect"
        android:icon="@drawable/baseline_how_to_reg_24"
        android:title="@string/nav_drawer_action_signin" />
    <item
        android:id="@+id/action_signup"
        android:icon="@drawable/baseline_supervisor_account_24"
        android:title="@string/nav_drawer_action_signup" />
    <item
        android:id="@+id/action_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_do_not_disturb_off_24"
        android:title="@string/nav_drawer_action_disconnect" />
    <item
        android:id="@+id/action_account"
        android:icon="@drawable/baseline_vpn_key_24"
        android:title="@string/accountPage" />
    <item
        android:id="@+id/action_cgu"
        android:icon="@drawable/baseline_description_24"
        android:title="@string/nav_drawer_action_cgu" />
    <item
        android:id="@+id/action_legalNotices"
        android:icon="@drawable/baseline_description_24"
        android:title="@string/nav_drawer_action_mentionsLegales" />
    <item
        android:id="@+id/action_contact"
        android:icon="@drawable/baseline_mail_24"
        android:title="@string/nav_drawer_action_contact" />
    <item
        android:id="@+id/action_socialNetwork"
        android:icon="@drawable/baseline_cloud_24"
        android:title="@string/nav_drawer_action_socialNetworks" />
</menu>