<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/content_description_title_registration"
        android:text="@string/title_registration"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_registrationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/content_description_registration_name_title"
        android:text="@string/registration_name_title"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_registration" />

    <EditText
        android:id="@+id/editText_registrationName"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/registration_name"
        android:inputType="text"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="@+id/text_registrationName"
        app:layout_constraintTop_toBottomOf="@+id/text_registrationName" />

    <TextView
        android:id="@+id/text_registrationEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/content_description_registration_email_title"
        android:text="@string/registration_email_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/editText_registrationName"
        app:layout_constraintTop_toBottomOf="@+id/editText_registrationName" />

    <EditText
        android:id="@+id/editText_registrationEmail"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="john@smith.com"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/text_registrationEmail"
        app:layout_constraintTop_toBottomOf="@+id/text_registrationEmail" />

    <TextView
        android:id="@+id/text_registrationPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/content_description_registration_password_title"
        android:text="@string/registration_password_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/editText_registrationEmail"
        app:layout_constraintTop_toBottomOf="@+id/editText_registrationEmail" />

    <EditText
        android:id="@+id/editText_registrationPassword"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/text_registrationPassword"
        app:layout_constraintTop_toBottomOf="@+id/text_registrationPassword" />

    <TextView
        android:id="@+id/text_registrationRedirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registration_redirection"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_registrationPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>