<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/orderConfirmedPage_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/orderConfirmedPage_title"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/orderConfirmed_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/blue_app"
        android:text="@string/orderConfirmedPage_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/thankOrderConfirmed_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/orderConfirmedPage_thankYou"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderConfirmedPage_textView" />

    <TextView
        android:id="@+id/detailOrderConfirmed_textView3"
        android:layout_width="363dp"
        android:layout_height="151dp"
        android:layout_marginTop="20dp"
        android:text="@string/orderConfirmedPage_detail"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/thankOrderConfirmed_textView"
        app:layout_constraintTop_toBottomOf="@+id/thankOrderConfirmed_textView" />
</androidx.constraintlayout.widget.ConstraintLayout>